Closed Bug 1765423 Opened 3 years ago Closed 3 years ago

Tooltips now have yellow background instead of white

Categories

(Toolkit :: Themes, defect, P1)

defect

Tracking

()

VERIFIED FIXED
102 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox99 --- unaffected
firefox100 --- unaffected
firefox101 + verified
firefox102 --- verified

People

(Reporter: saschanaz, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(5 files)

Attached image image.png

I guess this is not an intended change per the description in https://phabricator.services.mozilla.com/D143754 ?

On regular (non-HCM) Windows 10+ we just fill a rect with infobackground color
and so on, so there shouldn't be any effective behavior change.

It did introduce a change, so filing a bug. Maybe a chance to introduce dark mode to tooltips 😄

Set release status flags based on info from the regressing bug 1757797

:emilio, since you are the author of the regressor, bug 1757797, could you take a look?
For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

That matches the native tooltips that already existed in the restore buttons and other applications, so even tho it was not directly intentional, it's it's pretty much a progression.

In terms of introducing dark mode support to tooltips, there's already a proton tooltips pref that does that's but it's not enabled by default. We could also add non-native theme support for the tooltip theme colors, but that would be inconsistent with the restore window tooltips and so.

Dao do you know the state of the proton tooltip pref? Presumably nobody is working on it? Maybe it could be cleaned up and we could improve a bit all the tooltips instead.

Status: NEW → UNCONFIRMED
Ever confirmed: false
Flags: needinfo?(emilio) → needinfo?(dao+bmo)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #3)

That matches the native tooltips that already existed in the restore buttons and other applications ...

Only the window control buttons are yellow natively on Windows (on other apps and for native apps like File Explorer), any other tooltips are white afaict.

Has Regression Range: --- → yes

(In reply to Emilio Cobos Álvarez (:emilio) from comment #3)

Dao do you know the state of the proton tooltip pref? Presumably nobody is working on it? Maybe it could be cleaned up and we could improve a bit all the tooltips instead.

I haven't heard of any plans to do that and don't know what it would take, so I would rather not count on that to fix this bug.

Can we just switch to background-color: window and color: windowtext on Windows? Perhaps only for @media (-moz-windows-default-theme) if we still want the info color for high contrast?

Flags: needinfo?(dao+bmo) → needinfo?(emilio)
Severity: -- → S4
Component: Widget: Win32 → Themes
Priority: -- → P1
Product: Core → Toolkit
Assignee: nobody → emilio
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

Sure, that works. I'll send another patch which looks slightly nicer as well.

Flags: needinfo?(emilio)

For that, make the Windows rounded-rect code apply to tooltips as well.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b9b71e18f873 Use Window/WindowText for tooltips in the default Windows theme. r=dao https://hg.mozilla.org/integration/autoland/rev/34a84ab2978a Make tooltips look nicer with default window themes. r=dao
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
Depends on: 1767815
No longer depends on: 1767815
Regressions: 1767815

Should we uplift this?

Flags: needinfo?(emilio)

Probably along bug 1767815.

Flags: needinfo?(emilio)

Comment on attachment 9274813 [details]
Bug 1765423 - Make tooltips look nicer with default window themes. r=dao

Beta/Release Uplift Approval Request

  • User impact if declined: Tooltips look ugly-ish on Win10/11.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0
  • List of other uplifts needed: Bug 1767815
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple CSS change.
  • String changes made/needed: none
  • Is Android affected?: No
Attachment #9274813 - Flags: approval-mozilla-beta?
Attachment #9274807 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Comment on attachment 9274807 [details]
Bug 1765423 - Use Window/WindowText for tooltips in the default Windows theme. r=dao

Approved for 101.0b5.

Attachment #9274807 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9274813 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Reproduced this issue on an affected Nightly build (2022-04-19) on Windows 10 x64.
Verified as fixed on Firefox 101.0b5 (20220510144626) and Firefox 102.0a1 (20220510213954) on Windows 10 x64 and Windows 11.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

Tooltips seem to be less defined and harder to read with this change.
Where they previously had a light background and black border; they now have a darker background and grey border.

100:

101.0b5:

Attached image old-tooltip.jpg
Attached image new-tooltip.jpg
Attachment #9276073 - Attachment mime type: application/octet-stream → image/png
Attachment #9276073 - Attachment mime type: image/png → image/jpeg
Attachment #9276074 - Attachment mime type: application/octet-stream → image/jpeg
Regressions: 1772018
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: