Bug 1765423 - Make tooltips look nicer with default window themes. r=dao, a=RyanVM

For that, make the Windows rounded-rect code apply to tooltips as well.

Differential Revision: https://phabricator.services.mozilla.com/D145327